[workspace]
resolver = "2"
members = [
    "xtask",

    # 'external' crates
    "axum-language",
    "evermore",
    "fenn",
    "hieroglyph",
    "windswept",
    "windswept-macros",

    # stry crates
    "stry-common",
    "stry-macros",

    "stry-backend-postgres",
    "stry-backend-sqlite",

    "stry-service-html",
    "stry-service-json",

    "stry-analytics",

    "stry",
]

[profile.dev.package.'*']
opt-level = 2
