[package]
name = "stry-evermore"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

description = "A library allowing you to run an fixed number of asynchronous task repeatedly until a shutdown signal is sent out."
documentation = "https://docs.rs/stry-evermore"
repository = "https://gitlab.com/stry-rs/evermore"

license = "MIT"

workspace = ".."

[features]
with-log = [ "log" ]
with-tracing = [ "tracing", "tracing-futures" ]

[dependencies]
futures-core = "0.3"
pin-project = "1.0"
log = { version = "0.4", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
tracing-futures = { version = "0.2", default-features = false, optional = true }
