[package]
name = "stry-backend-postgres"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "The PostgreSQL database backend for stry."
documentation = "https://docs.rs/stry-backend-postgres/"
repository = "https://gitlab.com/stry-rs/backend-postgres"

license = "MIT"

workspace = ".."

[dependencies]
stry-common = { version = "0.1", path = "../stry-common", features = [ "sqlx" ] }

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
