[package]
name = "stry-common"
version = "0.1.3"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

description = "Shared code for stry crates, from backends to frontends, they all depend on this."
documentation = "https://docs.rs/stry-common"
repository = "https://github.com/stry-rs/common"

license = "MIT"

workspace = ".."

[dependencies]
anyhow = "1.0"
arrayvec = { version = "0.7", features = [ "serde" ] }
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
either = { version = "1.6", features = [ "serde" ] }
futures-util = "0.3"
percent-encoding = "2.1"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
sqlx = { version = "0.5", features = [ "postgres", "chrono" ], optional = true }
tracing = "0.1"
ulid = { version = "0.4", features = [ "serde" ] }
