[package]
name = "stry-service-all"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[dependencies]
syndrome = { path = "../syndrome" }

stry-service-graphql = { path = "../stry-service-graphql" }

hyper = { version = "0.14", features = [ "server" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1"
