[package]
name = "stry-service-graphql"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[lib]
name = "service_graphql"
path = "src/lib.rs"

[[bin]]
name = "service-graphql"
path = "src/bin.rs"

[dependencies]
clockwork = { path = "../clockwork" }
syndrome = { path = "../syndrome" }

anyhow = "1.0"
async-graphql = { version = "2.8", features = [ "dataloader", "tracing", "chrono" ] }
httprouter = "0.5"
hyper = "0.14"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1"
