[package]
name = "stry-service-json"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common" }
stry-backend-postgres = { path = "../stry-backend-postgres" }

base64 = "0.13"
hyper = { version = "0.14", features = [ "server", "http1", "http2", "tcp", "stream" ] }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber = "0.2"
