[package]
name = "stry-service-json"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[dependencies]
stry-common = { version = "0.1", path = "../stry-common" }
stry-backend-postgres = { version = "0.1", path = "../stry-backend-postgres" }

axum = { version = "0.3", features = [ "headers" ] }
base64 = "0.13"
biscuit = "0.6.0-beta1"
headers = "0.3"
rand = "0.8"
serde = "1.0"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "signal" ] }
tower = { version = "0.4", features = [ "limit", "load-shed", "timeout", "util" ] }
tower-http = { version = "0.1", features = [ "auth", "metrics", "trace" ] }
tracing-subscriber = "0.3"
