[package]
name = "syndrome"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = "0.4.19"
futures-util = "0.3"
hyper = { version = "0.14", features = [ "server", "http1", "http2", "tcp" ] }
path-tree = "0.2"
rand = "0.8"
tracing = "0.1"
