[package]
name = "xtask"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
anyhow = "=1.0.58"
quote = "1.0"
serde = { version = "=1.0.139", features = [ "derive" ] }
serde_path_to_error = "0.1"
serde_yaml = "0.8"
time = "=0.3.11"
ureq = "2.1"
